# autoware_dummy_repository

./: .gitignore  README.md  autoware.repos  create_prs_for_vcs_repositories_update.py  create_version_update_pr.py  pyproject.toml  simulator.repos
.github/workflows/: create-version-update-pr.yaml
dummy_package/: CMakeLists.txt  package.xml
