[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoware_dummy_repository"
version = "0.1.0"
description = "Testing purpose repository to develop a workflow which updates the version of sub-repositories in the autoware.repos"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Junya Sasaki", email = "junya.sasaki@tier4.jp" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

dependencies = [
    "ruamel.yaml",
    "PyGithub",
    "GitPython",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/autowarefoundation/autoware_dummy_repository"
"Bug Tracker" = "https://github.com/autowarefoundation/autoware_dummy_repository/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/create_prs_for_vcs_repositories_update"]
